--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <h4>Elevation Academy</h4>
         <h5>Elevation Academy</h5>
         <h6>Elevation Academy</h6>
+        <img src="./hamster.jpg">
         
 
     
